[metadata]
name = rowantree.common.sdk
version = 0.4.0
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = The Rowan Tree Common Utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
